# TestSwap

./: Cargo.toml  README.md  clear.bat  db.sqlite
.sqlx/: query-6df688dea11d0740e87a9f2b19ab271e9ecfb1c2d47461aafb0a259f2b18b9d7.json
src/: README.md  main.rs
src/api/: datatypes.rs  mod.rs  search.rs  upload.rs
static/: index.html  search.html
